fix: scrollbar, top-gap

--- a/s/web/templates/style-partials/_home.scss
+++ b/s/web/templates/style-partials/_home.scss
@@ -5,7 +5,7 @@
 		max-width: 1700px;
 		margin: auto;
 	}
-
+	overflow: hidden;
 	[data-panel="game"] {
 		text-align: left;
 		// display: none;
